[package]
name = "transpi"
version = "0.1.0"
authors = ["Hernawan Faïz Abdillah <hernawan.faiz.abdillah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.11.0"
glutin = "0.24.1"
takeable-option = "0.4"
piston-viewport = "1.0.0"
piston2d-graphics = "0.37.0"
piston2d-opengl_graphics = "0.74.0"

[build-dependencies]
gl_generator = "0.13"